Fix text alignment

--- a/client/components/checklist/style.scss
+++ b/client/components/checklist/style.scss
@@ -58,6 +58,7 @@
 	}
 
 	&-summary {
+		align-self: center;
 		font-size: 12px;
 		line-height: 24px;
 		color: var( --color-text-subtle );
